--- a/docs/styles.css
+++ b/docs/styles.css
@@ -15,7 +15,11 @@
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizelegibility;
     font-family: "SharpSansNo1-Extrabold", sans-serif;
-    overflow-x: hidden;
+}
+
+main{
+  overflow-x: hidden;
+
 }
 
 .h1, .h2, .h3, .h4, .h5, .h6, h1, h2, h3, h4, h5, h6 {
@@ -24,6 +28,8 @@
     font-weight: 500;
     line-height: 1.2;
 }
+
+
 
 #red{
   color: var(--primary);
